--- a/lavarel/composer.json
+++ b/lavarel/composer.json
@@ -15,7 +15,7 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*"
     },
-    "autoload": {                              /自动加载*/
+    "autoload": {                              /*自动加载*/
         "classmap": [
             "database"
         ],
